# env-inventory

./: Cargo.toml  LICENSE  README.md
examples/hello-envs/: hello-world.toml  main.rs  other.rs
src/: lib.rs
