[package]
name = "env-inventory"
version = "0.1.0"
description = "A simple library to load globally availaable environment variables into a static inventory."
license = "MIT"
resolver = "2"
authors = [ "Ahmed Masud <ahmed.masud@saf.ai>"]
edition = "2021"
rust-version = "1.61"
repository = "https://github.com/safai-labs/env-inventory.git"

[lib]

[dependencies]
inventory = "0.3"
thiserror = "1.0"
toml = "0.8.0"
tracing = "0.1"

[profile.release]
incremental = false

[profile.dev]
incremental = false

[dev-dependencies]
tempfile = "3.8.0"
